@@ -7,8 +7,8 @@ class RemoteAdyenTest < Test::Unit::TestCase
     @amount = 100
 
     @credit_card = credit_card('4111111111111111',
-      :month => 8,
-      :year => 2018,
+      :month => 10,
+      :year => 2020,
       :first_name => 'John',
       :last_name => 'Smith',
       :verification_value => '737',
@@ -63,7 +63,7 @@ class RemoteAdyenTest < Test::Unit::TestCase
   def test_failed_authorize
     response = @gateway.authorize(@amount, @declined_card, @options)
     assert_failure response
-    assert_equal 'CVC Declined', response.message
+    assert_equal 'Refused', response.message
   end
 
   def test_successful_purchase
@@ -108,7 +108,7 @@ class RemoteAdyenTest < Test::Unit::TestCase
   def test_failed_purchase
     response = @gateway.purchase(@amount, @declined_card, @options)
     assert_failure response
-    assert_equal 'CVC Declined', response.message
+    assert_equal 'Refused', response.message
   end
 
   def test_successful_authorize_and_capture
@@ -184,7 +184,7 @@ class RemoteAdyenTest < Test::Unit::TestCase
     assert response = @gateway.store(@declined_card, @options)
 
     assert_failure response
-    assert_equal 'CVC Declined', response.message
+    assert_equal 'Refused', response.message
   end
 
   def test_successful_purchase_using_stored_card
@@ -214,7 +214,7 @@ class RemoteAdyenTest < Test::Unit::TestCase
   def test_failed_verify
     response = @gateway.verify(@declined_card, @options)
     assert_failure response
-    assert_match 'CVC Declined', response.message
+    assert_match 'Refused', response.message
   end
 
   def test_invalid_login
